--- a/train_and_make_pseudo.ipynb
+++ b/train_and_make_pseudo.ipynb
@@ -990,7 +990,42 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "all_batch_indices = list(range(200, 6001, 200)) + [6090]\n",
+    "all_pseudo_labels = []\n",
+    "\n",
+    "for i_batch in tqdm(all_batch_indices):\n",
+    "    batch_preds = []\n",
+    "    for i_fold in range(5):\n",
+    "        pred = torch.load(f\"all_new_v2_dl/po_predictions_fold_{i_fold}_batch_{i_batch}.pt\")\n",
+    "        batch_preds.append(pred)\n",
+    "    mean_batch_preds = torch.stack(batch_preds, dim=0).mean(dim=0)\n",
+    "    \n",
+    "    for probs in mean_batch_preds:\n",
+    "        pos_indices = torch.where(probs > 0.4)[0].tolist()\n",
+    "        ignore_indices = torch.where((probs > 0.05) & (probs <= 0.4))[0].tolist()\n",
+    "        all_pseudo_labels.append((pos_indices, ignore_indices))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pseudo_label_df = pd.DataFrame()\n",
+    "pseudo_label_df['surveyId'] = train_po_dd['surveyId']\n",
+    "pseudo_label_df[['pos_indices', 'ignore_indices']] = pd.DataFrame(all_pseudo_labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pseudo_label_df.to_csv(\"all_new_v2_dl/po_pseudo_labels.csv\", index=False)"
+   ]
   }
  ],
  "metadata": {
